@@ -2232,13 +2232,13 @@ test(780, data.table(a=1:3,b=1:6)[,i:=.GRP,by=a][,i2:=.GRP], data.table(a=1:3,b=
 
 # Test new .I binding
 DT = data.table(a=1:4,b=1:8)
-test(781, DT[,.I,by=a]$.I, INT(1,5,2,6,3,7,4,8))
+test(781, DT[,.I,by=a]$I, INT(1,5,2,6,3,7,4,8))
 test(782, DT[,.I[which.max(b)],by=a], data.table(a=1:4,V1=5:8))
 setkey(DT,a)
-test(783, DT[,.I,by=a]$.I, 1:8)
+test(783, DT[,.I,by=a]$I, 1:8)
 test(784, DT[,.I[which.max(b)],by=a], data.table(a=1:4,V1=INT(2,4,6,8),key="a"))
-test(785, DT[J(2:4),.I,by=a%%2L], data.table(a=rep(0:1,c(4,2)),.I=INT(3,4,7,8,5,6)))
-test(786, DT[J(c(3,2,4)),list(.I,.GRP),by=.EACHI], data.table(a=rep(c(3L,2L,4L),each=2),.I=INT(5,6,3,4,7,8),.GRP=rep(1:3,each=2L)))
+test(785, DT[J(2:4),.I,by=a%%2L], data.table(a=rep(0:1,c(4,2)),I=INT(3,4,7,8,5,6)))
+test(786, DT[J(c(3,2,4)),list(.I,.GRP),by=.EACHI], data.table(a=rep(c(3L,2L,4L),each=2),I=INT(5,6,3,4,7,8),.GRP=rep(1:3,each=2L)))
 test(787, DT[J(3:2),`:=`(i=.I,grp=.GRP),by=.EACHI][,list(i,grp)], data.table(i=INT(NA,NA,3:6,NA,NA),grp=INT(NA,NA,2,2,1,1,NA,NA)))
 
 # New not-join (a.k.a. not-select, since not just for data.table i but integer, logical and character too)
@@ -4595,6 +4595,25 @@ set(DT,1L,"b",3L)
 test(1302, 0L[1L], 3L-3L)
 test(1303, 0L, 3L-3L)
 
+# FR #5760. Test to just make sure that GForce and dogroups with .N are giving the same results.
+set.seed(2L)
+dt <- data.table(x=sample(rep(1:5e3, each=3)), y=sample(10))
+options(datatable.optimize = 1L)
+ans1 <- dt[, list(.N, sum(y)), by=x]
+options(datatable.optimize = 2L)
+ans2 <- dt[, list(.N, sum(y)), by=x]
+test(1304.1, ans1, ans2)
+
+dt <- data.table(x=sample(rep(1:5e3, each=3)), y=sample(10), key="x")
+options(datatable.optimize = 1L)
+ans1 <- dt[, list(.N, sum(y)), by=x]
+options(datatable.optimize = 2L)
+ans2 <- dt[, list(.N, sum(y)), by=x]
+test(1304.2, ans1, ans2)
+
+# FR #5528
+DT <- data.table(x=1:5, y=6:10)
+test(1305, setDF(DT), data.frame(x=1:5, y=6:10))
 
 ##########################
 
